--- a/style.css
+++ b/style.css
@@ -33,3 +33,15 @@
     height: 100%;
     object-fit: cover;
 }
+
+.fixed-badge {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: gold;
+    color: white;
+    font-weight: bold;
+    padding: 5px;
+    border-radius: 50%;
+    font-size: 12px;
+}
